Fixed scrollbar and not showing access components

--- a/src/components/access/access.scss
+++ b/src/components/access/access.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     
 
-    .box{
+    .form{
         display: flex;
         flex-direction: column;
         align-items: center;
