--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,10 +2,10 @@
 
 .navbar {
   width: 100%;
-  height: auto;
+  height: 100%;
   background-color: white;
   color: black;
-  overflow: hidden;
+  overflow: auto;
   position: fixed;
   top: 0;
   z-index: 3;
